# ElasticFusion

./: CMDlive.freiburg  CMDlive.ply  CMakeLists.txt  GUIlive.freiburg  README.md  VicariosFusionlive.freiburg  build.sh  testbuild.sh
CMD/src/: CMakeLists.txt  Main.cpp  Main.cpp.autosave  MainController.cpp  MainController.h  pointcloudstreamer.cpp  pointcloudstreamer.h
CMD/src/Tools/: LiveLogReader.h  ZedInterface.h
Core/src/: CMakeLists.txt  ElasticFusion.cpp  ElasticFusion.h
GUI/src/: CMakeLists.txt  MainController.cpp
GUI/src/Tools/: LiveLogReader.cpp  ZedInterface.cpp  ZedInterface.h
VicariosFusion/: CMakeCache.txt  CMakeLists.txt
VicariosFusion/src/: CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  FindZed.cmake  Main.cpp  MainController.cpp  MainController.h  README.md  pointcloudstreamer.cpp  pointcloudstreamer.h
VicariosFusion/src/Tools/: GUI.h  LiveLogReader.cpp  OpenNI2Interface.h  ZedInterface.cpp  ZedInterface.h
